# port-manager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_REVIEW.md  CODE_REVIEW_PROMPT.md  ORIGINAL_DESIGN.md
src/: cli.rs  config.rs  display.rs  error.rs  main.rs  model.rs  persistence.rs  port.rs  registry.rs
src/ports/: macos.rs  mod.rs
tests/: cli_integration.rs
