[package]
name = "port-manager"
version = "1.0.0"
edition = "2021"
description = "CLI tool for managing port allocations across projects"
authors = ["Jon"]
license = "MIT"
repository = "https://github.com/gorgeguy/port-manager"
homepage = "https://github.com/gorgeguy/port-manager"
keywords = ["port", "cli", "allocation", "development", "networking"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
comfy-table = "7"
libc = "0.2"
libproc = "0.14"
thiserror = "1"
fs2 = "0.4.3"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
